Fix wrapper-full-width with overflow-x: hidden

--- a/frontend/style/elements/_elements.body.scss
+++ b/frontend/style/elements/_elements.body.scss
@@ -2,4 +2,6 @@ body {
   color: $black;
   padding: 0;
   margin: 0;
+  // since we use 100vw
+  overflow-x: hidden;
 }
